2003-08-21  Nick Clifton  <nickc@redhat.com>

	* po/tr.po: Updated Turkish translation.

2003-08-20  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (md_parse_option): Add PPC_OPCODE_ISEL and
	PPC_OPCODE_RFMCI to -m440 selected ppc_cpu.

2003-08-19  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (cp_address_required_here): Add code to handle
	unindexed addressing mode.

2003-08-19  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (md_parse_option): Handle -m440.
	(md_show_usage): Add -m440.
	(md_apply_fix3): Warning fix.
	* doc/c-ppc.texi: Document -m440.

2003-08-16  Benjamin Kalytta  <bkausbk@web.de>

	* read.c (s_print): Check for NULL.

2003-08-16  Alan Modra  <amodra@bigpond.net.au>

	* write.c (fixup_segment): When handling an expression involving
	the subtraction of two symbols in the same segment, don't clear
	fx_pcrel except for TC_M68K.

2003-08-14  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.h: Remove BFD_ASSEMBLER tests and all !BFD_ASSEMBLER
	code.
	* config/tc-i386.c: Likewise.
	(RELOC_ENUM): Don't define.  Replace throughout with enum.

	* dep-in.sed: Remove libintl.h.  Ignore include/fopen-*.h
	* Makefile.am (POTFILES.in): Unset LC_COLLATE.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2003-08-08  Andreas Schwab  <schwab@suse.de>

	* config/tc-m68k.h (TARGET_USE_CFIPOP)
	(DWARF2_DEFAULT_RETURN_COLUMN, DWARF2_CIE_DATA_ALIGNMENT)
	(tc_regname_to_dw2regnum, tc_cfi_frame_initial_instructions):
	Define.
	* config/tc-m68k.c: Include "dw2gencfi.h".
	(tc_m68k_regname_to_dw2regnum)
	(tc_m68k_frame_initial_instructions): New functions.

2003-08-08 Dmitry Diky <diwil@mail.ru>

	* config/tc-msp430.c: Add xW42 and xE42 parts. Sort MPU list
	according to gcc order.

2003-08-07  Jason Eckhardt  <jle@rice.edu>

	* config/tc-i860.c (i860_check_label): New function.
	* config/tc-i860.h (i860_check_label): New prototype.
	(tc_check_label): Define macro as i860_check_label.

2003-08-06  Jason Eckhardt  <jle@rice.edu>
